feat : add delete getbyid update for tech
